--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,11 @@ body {
 .animate-fadeFog {
   animation: fadeFog 20s ease-in-out infinite;
 }
+
+/* Neon border para a tela */
+.neon-border {
+  box-shadow: 
+    0 0 20px 5px rgba(0, 255, 153, 0.6),
+    0 0 40px 10px rgba(0, 255, 153, 0.4) inset;
+  border-radius: 30px;
+}
