--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,4 @@
-/* eslint-disable */
-/* postcss */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 /* Variáveis base */
 :root {
@@ -151,7 +147,6 @@ body {
     background-position: 100px 100px;
   }
 }
-
 @keyframes pulseGlow {
   0%,
   100% {
