--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -162,3 +162,18 @@ body {
 .animate-pulseGlow {
   animation: pulseGlow 2.5s ease-in-out infinite;
 }
+@keyframes pulseTitle {
+  0%,
+  100% {
+    text-shadow: 0 0 10px #00ff99, 0 0 20px #00ff99, 0 0 30px #00ff99;
+    transform: scale(1);
+  }
+  50% {
+    text-shadow: 0 0 20px #00ff99, 0 0 40px #00ff99, 0 0 60px #00ff99;
+    transform: scale(1.03);
+  }
+}
+
+.animate-pulse-title {
+  animation: pulseTitle 3s infinite ease-in-out;
+}
