--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
 
-<div className="fumaca"></div>
-
 /* Variáveis base */
 :root {
   --background: #ffffff;
@@ -162,31 +160,17 @@ body {
 }
 
 .fumaca {
-  position: fixed;
-  width: 200vw;
-  height: 200vh;
-  top: -50%;
-  left: -50%;
-  background: radial-gradient(
-      circle,
-      rgba(140, 0, 255, 0.12) 20%,
-      transparent 80%
-    ),
-    radial-gradient(circle, rgba(230, 0, 255, 0.08) 20%, transparent 80%);
-  filter: blur(120px);
-  animation: moverFumaca 40s ease-in-out infinite alternate;
-  z-index: -1;
-  pointer-events: none;
+  animation: moveFog 60s linear infinite;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-@keyframes moverFumaca {
+@keyframes moveFog {
   0% {
-    transform: translate(0%, 0%) scale(1);
-  }
-  50% {
-    transform: translate(10%, -5%) scale(1.05);
+    background-position: 0% center;
   }
   100% {
-    transform: translate(-10%, 10%) scale(1.1);
+    background-position: 100% center;
   }
 }
