--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,6 +164,12 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  z-index: 0;
-  opacity: 0.9; /* pode aumentar para testar: 0.6, 0.8 */
+}
+@keyframes moveFog {
+  0% {
+    background-position: 0% center;
+  }
+  100% {
+    background-position: 100% center;
+  }
 }
