--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -188,3 +188,18 @@ body {
 .animate-pulse-button {
   animation: pulseButton 2s infinite ease-in-out;
 }
+@keyframes pulse-fundo {
+  0%,
+  100% {
+    transform: scale(1);
+    opacity: 0.4;
+  }
+  50% {
+    transform: scale(1.03);
+    opacity: 0.6;
+  }
+}
+
+.fumaca-pulsante {
+  animation: pulse-fundo 8s ease-in-out infinite;
+}
